<resources>
    <string name="app_name">Echo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="username">username</string>
    <string name="postedimage">PostedImage</string>
    <string name="password">password</string>
    <string name="applogo">applogo</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="search_for_anything">Search for anything...</string>
    <string name="posts">Posts</string>
    <string name="portfolio">Portfolio</string>
    <string name="logout">LOGOUT</string>
    <string name="DEFAULT_PROFILE_PIC">https://www.sackettwaconia.com/wp-content/uploads/default-profile.png</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">name</string>
    <string name="done">Done</string>
    <string name="bio">bio</string>
    <string name="posted_image">Posted Image</string>
    <string name="caption">caption</string>
    <string name="post">post</string>
    <string name="camera">camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_photo_from_camera">Take a photo from Camera</string>
    <string name="choose_a_photo_from_gallery">Choose a photo from Gallery</string>
    <string name="camera_icon">camera icon</string>
    <string name="gallery_icon">gallery icon</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="post_your_event">Post your Event</string>
    <string name="event_image">Event Image</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="welcome_to_echo">Welcome to Echo</string>
    <string name="Country">country</string>
    <string name="your">Your</string>
    <string name="choose">Choose</string>
    <string name="location">Location</string>
    <string name="city" />
    <string name="enter_your_city">Enter your city</string>
    <string name="select_your_country">Select your country</string>
    <string name="instrument">instrument</string>
    <string name="choose_your_instruments">Choose your instruments</string>
    <string name="save">Save</string>
    <string name="bass_guitar">Bass guitar</string>
    <string name="acoustic_guitar">Acoustic Guitar</string>
    <string name="electric_guitar">Electric Guitar</string>
    <string name="trumpet">Trumpet</string>
    <string name="saxophone">Saxophone</string>
    <string name="violin">Violin</string>
    <string name="trombone">Trombone</string>
    <string name="cello">Cello</string>
    <string name="clarinet">Clarinet</string>
    <string name="drums">Drums</string>
    <string name="piano">Piano</string>
    <string name="percussion">Percussion</string>
    <string name="sound_engineer">Sound Engineer</string>
    <string name="vocals">Vocals</string>
    <string name="posted_video">Posted Video</string>
    <string name="what_genres_of_music_do_you_play">What genres of music do you play?</string>
    <string name="followers">Followers</string>
    <string name="follow_top_users">Follow top users</string>
    <string name="userprofileimage">userProfileImage</string>
    <string name="connect_your_socials">Connect your socials!</string>
    <string name="youtube_start_url">https://www.youtube.com/</string>
    <string name="profile">Profile</string>
    <string name="what_instruments_do_you_play">What instruments do you play?</string>
    <string name="enter_a_post_title">Enter a post title!</string>
    <string name="add_a_location">Add a location</string>
    <string name="video_icon">Video Icon</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="share">Share</string>
    <string name="sort_by">Sort By</string>
    <string name="instruments">Instruments</string>
    <string name="genres">Genres</string>
    <string name="near_me">Near me</string>
    <string name="most_active">Most active</string>
    <string name="add_genre_filters">Add genre filters!</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="profile_other">Profile Other</string>
    <string name="profile_me" />
    <string name="add_profile_pic">Add Profile Pic</string>
</resources>