<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ComposeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_compose"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar_compose"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/posted_image"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:autofillHints="@string/caption"
        android:ems="10"
        android:hint="@string/caption"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:text="@string/post"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/btnSubmit"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/camera"
        android:src="@drawable/ic_baseline_camera_alt_24" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:text="@string/choose_from_gallery" />


</RelativeLayout>