<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_profile"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"/>

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar_edit_profile"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_pic"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvChangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/change_profile_photo"
        android:textColor="#2196F3"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/tvChangePhoto"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/tlUsername"
        android:layout_marginRight="16dp"
        android:hint="@string/name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/tlName"
        android:layout_marginRight="16dp"
        android:hint="@string/bio"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/btnDone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tlBio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:backgroundTint="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/done"
        android:textColor="#2196F3" />


</RelativeLayout>