<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/camLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/ivCamIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/camera_icon"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

        <TextView
            android:id="@+id/tvTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:text="@string/take_a_photo_from_camera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/galleryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/ivPhotoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/gallery_icon"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:srcCompat="@drawable/ic_baseline_photo_24" />

        <TextView
            android:id="@+id/tvChoosePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:text="@string/choose_a_photo_from_gallery" />
    </LinearLayout>

</LinearLayout>