<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/composebackground4"
    tools:context=".activities.ComposeActivity">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbLoading"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="16dp"
        android:hint="@string/enter_a_post_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="2dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_below="@id/tlTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/posted_image"
            tools:srcCompat="@tools:sample/avatars" />


        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btnCaptureImage"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_camera_alt_24"
            android:contentDescription="@string/camera"
            android:scaleType="fitCenter" />

        <View
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <ImageButton
            android:id="@+id/btnCaptureVideo"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_videocam_24"
            android:contentDescription="@string/video_icon" />

        <View
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <ImageButton
            android:id="@+id/btnGallery"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gallery_icon"
            android:backgroundTint="@color/light_grey" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlCaption"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:hint="@string/add_a_caption">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:drawableStart="@drawable/ic_baseline_chat_bubble_outline_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlLocation"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/tlCaption"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:hint="@string/add_a_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="2dp"
            android:drawableStart="@drawable/ic_outline_location_on_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="14sp" />


</RelativeLayout>